# mounty

./: .SRCINFO  .gitignore  LICENSE  MANIFEST.in  PKGBUILD  README.md  mounty.desktop  mounty.py  pyproject.toml  requirements.txt  share_manager.py
ui/: main_window.py  share_dialog.py  share_row.py
